--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      My first app
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,6 +15,9 @@
 
   <div id="container">
     <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <p>
+      <strong>{{mensagem}}</strong>
+    </p>
+    <ion-button expand="block">Block</ion-button> 
   </div>
 </ion-content>
